@@ -2,7 +2,7 @@ package org.ftf.koifishveterinaryservicecenter.controller;
 
 import org.ftf.koifishveterinaryservicecenter.dto.TimeSlotDto;
 import org.ftf.koifishveterinaryservicecenter.entity.TimeSlot;
-import org.ftf.koifishveterinaryservicecenter.exception.TimeSlotNotFound;
+import org.ftf.koifishveterinaryservicecenter.exception.TimeSlotNotFoundException;
 import org.ftf.koifishveterinaryservicecenter.exception.UserNotFoundException;
 import org.ftf.koifishveterinaryservicecenter.mapper.TimeSlotMapper;
 import org.ftf.koifishveterinaryservicecenter.service.slotservice.SlotService;
@@ -22,12 +22,19 @@ import java.util.stream.Collectors;
 @RequestMapping("/api/v1/slots")
 public class TimeSlotController {
     private final SlotService slotService;
+    private final TimeSlotMapper timeSlotMapper;
 
     @Autowired
-    public TimeSlotController(final SlotService slotService) {
+    public TimeSlotController(final SlotService slotService,
+                              TimeSlotMapper timeSlotMapper) {
         this.slotService = slotService;
+        this.timeSlotMapper = timeSlotMapper;
     }
 
+    /*
+     * Get BOOKED slot of a veterinarian
+     * Actors: Veterinarian
+     * */
     @GetMapping("/{veterinarianID}")
     public ResponseEntity<?> getVeterinarianSlots(@PathVariable("veterinarianID") final Integer veterinarianID) {
         try {
@@ -36,32 +43,22 @@ public class TimeSlotController {
                     .map(TimeSlotMapper.INSTANCE::convertToTimeSlotDto)
                     .collect(Collectors.toList());
             return new ResponseEntity<>(dtos, HttpStatus.OK);
-//            return new ResponseEntity<>(slots, HttpStatus.OK);
         } catch (UserNotFoundException e) {
             return new ResponseEntity<>(e.getMessage(), HttpStatus.NOT_FOUND);
-        } catch (TimeSlotNotFound e) {
+        } catch (TimeSlotNotFoundException e) {
             return new ResponseEntity<>(e.getMessage(), HttpStatus.NOT_FOUND);
         }
     }
 
-    /*
-     * Get all available slots since current day for customer for choosing in case not specifying veterinarian
-     * Actors: Customer
-     * */
+    // get all available slot id > current hour + 3h
+    // for Customer
     @GetMapping("/available")
     public ResponseEntity<?> getAvailableSlots() {
-        try {
-            List<TimeSlot> slots = slotService.getAvailableSlots();
-            List<TimeSlotDto> slotDtos = slots.stream()
-                    .map(TimeSlotMapper.INSTANCE::convertToAvailableTimeSlotDto)
-                    .collect(Collectors.toList());
-            return new ResponseEntity<>(slotDtos, HttpStatus.OK);
-        } catch (TimeSlotNotFound e) {
-            return new ResponseEntity<>(e.getMessage(), HttpStatus.NOT_FOUND);
-        } catch (Exception e) {
-            return new ResponseEntity<>(e.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
-        }
+        List<TimeSlot> timeSlots = slotService.getListAvailableTimeSlots();
+        List<TimeSlotDto> dtos = timeSlots.stream().map(timeSlotMapper::convertToTimeSlotDtoAvailable).toList();
+        return new ResponseEntity<>(dtos, HttpStatus.OK);
     }
+
 
     /*
      * Get all available slots since current day for customer for choosing in case not specifying veterinarian
@@ -76,7 +73,7 @@ public class TimeSlotController {
                     .map(TimeSlotMapper.INSTANCE::convertToAvailableTimeSlotDto)
                     .collect(Collectors.toList());
             return new ResponseEntity<>(slotDtos, HttpStatus.OK);
-        } catch (TimeSlotNotFound e) {
+        } catch (TimeSlotNotFoundException e) {
             return new ResponseEntity<>(e.getMessage(), HttpStatus.NO_CONTENT);
         } catch (UserNotFoundException e) {
             return new ResponseEntity<>(e.getMessage(), HttpStatus.NOT_FOUND);
